src/main/java/com/example/updatemebook/errors/ObjectNotFoundException.java
package com.example.updatemebook.errors;

public class ObjectNotFoundException extends RuntimeException{
    public ObjectNotFoundException(String message){
        super(message);
    }
}
